Fix i18n comments jlaur
Signed-off-by: Leo Siepel <leosiepel@gmail.com>